# tgc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
docs/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group__group1.html  group__group2.html  group__group3.html  group__group4.html  group__group5.html  index.html  modules.html  structAnimation__s.html  structAudio__s.html  structChat__s.html  structContact__s.html  structDocument__s.html  structFile__s.html  structGame__s.html  structLocation__s.html  structMessageEntity__s.html  structMessage__s.html  structPhotoSize__s.html  structSticker__s.html  structUpdate__s.html  structUserProfilePhotos__s.html  structUser__s.html  structVenue__s.html  structVideo__s.html  structVoice__s.html  structhttp__response.html  structtg__res.html  (+7 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  (+45 more)
doxygen/: Doxyfile  README
src/: Makefile  tgapi.c  tgapi.h  tgparse.c  tgparse.h  tgtypes.h
